# iru-ade-manager

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: http_client.rs  lib.rs  main.rs
src-tauri/src/commands/: ade.rs  credentials.rs  health.rs  mod.rs
src/api/: kandji.ts
src/components/: AdeEditDialog.tsx  AdeTokenUploadDialog.tsx  CredentialSetupDialog.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx
src/lib/: types.ts  utils.ts
src/pages/: AdeTokensPage.tsx
