[package]
name = "kandji-ade-manager"
version = "0.1.0"
description = "Kandji ADE Token Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "kandji_ade_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["apple-native"] }
chrono = "0.4"
